// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should disable delete icon while loading 1`] = `
<div
  className="root_disabled"
>
  <a
    className="thumbnailContainer"
    href={null}
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=100&height=125&fit=cover"
        srcSet="https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
        width={100}
      />
    </div>
  </a>
  <a
    className="name"
    href={null}
  >
    P1
  </a>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    Qty :
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
     ea.
  </span>
  <span
    className="stockStatus"
  >
    
  </span>
  <button
    className="deleteButton"
    disabled={true}
    onClick={[MockFunction]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Should render correctly 1`] = `
<div
  className="root"
>
  <a
    className="thumbnailContainer"
    href={null}
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=100&height=125&fit=cover"
        srcSet="https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
        width={100}
      />
    </div>
  </a>
  <a
    className="name"
    href={null}
  >
    P1
  </a>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    Qty :
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
     ea.
  </span>
  <span
    className="stockStatus"
  >
    
  </span>
  <button
    className="deleteButton"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Should render correctly when configured to use variant thumbnail 1`] = `
<div
  className="root"
>
  <a
    className="thumbnailContainer"
    href={null}
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=100&height=125&fit=cover"
        srcSet="https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
https://backend.test/media/catalog/product/www.venia.com/p1-variant1?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
        width={100}
      />
    </div>
  </a>
  <a
    className="name"
    href={null}
  >
    P1
  </a>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    Qty :
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
     ea.
  </span>
  <span
    className="stockStatus"
  >
    
  </span>
  <button
    className="deleteButton"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Should render correctly with out of stock product 1`] = `
<div
  className="root"
>
  <a
    className="thumbnailContainer"
    href={null}
  >
    <div
      className="root container"
    >
      <img
        alt="P1"
        className="image placeholder"
        loading="eager"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
        width={100}
      />
      <img
        alt="P1"
        className="image notLoaded"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        sizes="100px"
        src="https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=100&height=125&fit=cover"
        srcSet="https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
https://backend.test/media/catalog/product/www.venia.com/p1?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
        width={100}
      />
    </div>
  </a>
  <a
    className="name"
    href={null}
  >
    P1
  </a>
  <dl
    className="options"
  >
    <div
      className="optionLabel"
    >
      <dt
        className="optionName"
      >
        Color :
      </dt>
      <dd
        className="optionValue"
      >
        red
      </dd>
    </div>
  </dl>
  <span
    className="quantity"
  >
    Qty :
  </span>
  <span
    className="price"
  >
    <span>
      $
    </span>
    <span>
      420
    </span>
    <span>
      .
    </span>
    <span>
      00
    </span>
     ea.
  </span>
  <span
    className="stockStatus"
  >
    Out-of-stock
  </span>
  <button
    className="deleteButton"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="3 6 5 6 21 6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
        <line
          x1="10"
          x2="10"
          y1="11"
          y2="17"
        />
        <line
          x1="14"
          x2="14"
          y1="11"
          y2="17"
        />
      </svg>
    </span>
  </button>
</div>
`;
